[gd_scene load_steps=6 format=2]

[ext_resource path="res://InitialMenu/InitialMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Assets/win.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/ui.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D" groups=["blocks"]]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0.654902, 0.72549, 0.854902, 1 )

[node name="InitialMenu" parent="." instance=ExtResource( 1 )]

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="Pause" type="Label" parent="."]
margin_left = 320.0
margin_top = 469.0
margin_right = 371.0
margin_bottom = 483.0
rect_scale = Vector2( 3, 3 )
text = "PAUSED"
align = 1

[node name="PressSpaceToStart" type="Label" parent="."]
margin_left = 260.0
margin_top = 630.0
margin_right = 409.0
margin_bottom = 646.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
text = "Press \"Space\" to start"
align = 1

[node name="Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="UserInterface" parent="." instance=ExtResource( 5 )]

[connection signal="start_game" from="InitialMenu" to="." method="_on_InitialMenu_start_game"]
